@@ -4,86 +4,112 @@ import com.google.common.net.{HttpHeaders, MediaType}
 import com.google.inject.Stage
 import com.twitter.conversions.time._
 import com.twitter.finagle.builder.ClientBuilder
-import com.twitter.finagle.httpx._
+import com.twitter.finagle.http._
 import com.twitter.finagle.service.Backoff._
 import com.twitter.finagle.service.RetryPolicy
 import com.twitter.finagle.service.RetryPolicy._
 import com.twitter.finagle.stats.{InMemoryStatsReceiver, NullStatsReceiver, StatsReceiver}
 import com.twitter.finagle.{ChannelClosedException, Service}
-import com.twitter.inject.app.{App, EmbeddedApp}
+import com.twitter.inject.PoolUtils
+import com.twitter.inject.app.{InjectionServiceModule, StartupTimeoutException}
+import com.twitter.inject.conversions.map._
 import com.twitter.inject.modules.InMemoryStatsReceiverModule
 import com.twitter.inject.server.EmbeddedTwitterServer._
+import com.twitter.inject.server.PortUtils._
+import com.twitter.server.AdminHttpServer
 import com.twitter.util._
 import java.net.{InetSocketAddress, URI}
 import java.util.concurrent.TimeUnit._
-import scala.collection.immutable.SortedMap
+import org.apache.commons.lang.reflect.FieldUtils
+import org.scalatest.Matchers
 
 object EmbeddedTwitterServer {
-  private def resolveClientFlags(useSocksProxy: Boolean, clientFlags: Map[String, String]) = {
+  private def resolveFlags(useSocksProxy: Boolean, flags: Map[String, String]) = {
     if (useSocksProxy) {
-      clientFlags ++ Map(
+      flags ++ Map(
         "com.twitter.server.resolverZkHosts" -> PortUtils.loopbackAddressForPort(2181),
         "com.twitter.finagle.socks.socksProxyHost" -> PortUtils.loopbackAddress,
         "com.twitter.finagle.socks.socksProxyPort" -> "50001")
     }
     else {
-      clientFlags
+      flags
     }
   }
 }
 
 /**
- * EmbeddedTwitterServer allows a twitter-server serving http or thrift endpoints to be started
- * locally (on ephemeral ports), and tested through it's http/thrift interfaces.
+ * EmbeddedTwitterServer allows a [[com.twitter.server.TwitterServer]] serving http or thrift endpoints to be started
+ * locally (on ephemeral ports) and tested through it's http/thrift interfaces.
  *
- * Note: All initialization fields are lazy to aid running multiple tests inside Intellij at the same time
- * since Intellij "pre-constructs" ALL the tests before running each one.
+ * Note: All initialization fields are lazy to aid running multiple tests inside an IDE at the same time
+ * since IDEs typically "pre-construct" ALL the tests before running each one.
  *
- * @param twitterServer The twitter server to be started locally for integration testing
- * @param clientFlags Command line flags (e.g. "foo"->"bar" is translated into -foo=bar)
- * @param extraArgs Extra command line arguments
- * @param waitForWarmup Once the app is started, wait for App warmup to be completed
- * @param stage Guice Stage used to create the server's injector. Since EmbeddedTwitterServer is used for testing, we default to Stage.DEVELOPMENT.
- *              This makes it possible to only mock objects that are used in a given test, at the expense of not checking that the entire
- *              object graph is valid. As such, you should always have at lease one Stage.PRODUCTION test for your service (which eagerly
- *              creates all Guice classes at startup)
- * @param useSocksProxy Use a tunneled socks proxy for external service discovery/calls (useful for manually run external integration tests that connect to external services)
- * @param skipAppMain Skip the running of appMain when the app starts. You will need to manually call app.appMain() later in your test.
+ * @param twitterServer The [[com.twitter.server.TwitterServer]] to be started for testing.
+ * @param flags Command line flags (e.g. "foo"->"bar" is translated into -foo=bar). See: [[com.twitter.app.Flag]].
+ * @param args Extra command line arguments.
+ * @param waitForWarmup Once the server is started, wait for server warmup to be completed
+ * @param stage [[com.google.inject.Stage]] used to create the server's injector. Since EmbeddedTwitterServer is used for testing,
+ *              we default to Stage.DEVELOPMENT. This makes it possible to only mock objects that are used in a given test,
+ *              at the expense of not checking that the entire object graph is valid. As such, you should always have at
+ *              least one Stage.PRODUCTION test for your service (which eagerly creates all classes at startup)
+ * @param useSocksProxy Use a tunneled socks proxy for external service discovery/calls (useful for manually run external
+ *                      integration tests that connect to external services).
+ * @param defaultRequestHeaders Headers to always send to the embedded server.
+ * @param streamResponse Toggle to not unwrap response content body to allow caller to stream response.
+ * @param verbose Enable verbose logging during test runs.
+ * @param disableTestLogging Disable all logging emitted from the test infrastructure.
+ * @param maxStartupTimeSeconds Maximum seconds to wait for embedded server to start. If exceeded a
+ *                              [[com.twitter.inject.app.StartupTimeoutException]] is thrown.
  */
 class EmbeddedTwitterServer(
-  val twitterServer: Ports,
-  clientFlags: Map[String, String] = Map(),
-  extraArgs: Seq[String] = Seq(),
+  twitterServer: com.twitter.server.TwitterServer,
+  flags: Map[String, String] = Map(),
+  args: Seq[String] = Seq(),
   waitForWarmup: Boolean = true,
   stage: Stage = Stage.DEVELOPMENT,
   useSocksProxy: Boolean = false,
-  skipAppMain: Boolean = false,
   defaultRequestHeaders: Map[String, String] = Map(),
   streamResponse: Boolean = false,
-  verbose: Boolean = true,
+  verbose: Boolean = false,
+  disableTestLogging: Boolean = false,
   maxStartupTimeSeconds: Int = 60)
-  extends EmbeddedApp(
-    app = twitterServer,
-    clientFlags = resolveClientFlags(useSocksProxy, clientFlags),
-    resolverMap = Map(),
-    extraArgs = extraArgs,
-    waitForWarmup = waitForWarmup,
-    skipAppMain = skipAppMain,
-    stage = stage,
-    verbose = verbose,
-    maxStartupTimeSeconds = maxStartupTimeSeconds) {
+  extends Matchers {
 
   /* Additional Constructors */
+
   def this(twitterServer: Ports) = {
     this(twitterServer, stage = Stage.PRODUCTION)
   }
 
   /* Main Constructor */
 
-  // Add framework override modules
-  if (isGuiceApp) {
-    guiceApp.addFrameworkOverrideModules(InMemoryStatsReceiverModule)
+  require(!isSingletonObject(twitterServer),
+    "server must be a new instance rather than a singleton (e.g. \"new " +
+      "FooServer\" instead of \"FooServerMain\" where FooServerMain is " +
+      "defined as \"object FooServerMain extends FooServer\"")
+
+  if (isInjectable) {
+    // overwrite com.google.inject.Stage if the underlying
+    // embedded server is a com.twitter.inject.server.TwitterServer.
+    injectableServer.stage = stage
+    // Add framework override modules
+    injectableServer.addFrameworkOverrideModules(InMemoryStatsReceiverModule)
   }
+
+  /* Fields */
+
+  val name = twitterServer.name
+  private val mainRunnerFuturePool = PoolUtils.newFixedPool("Embedded " + name)
+
+  //Mutable state
+  private var starting = false
+  private var started = false
+  protected[inject] var closed = false
+  private var _mainResult: Future[Unit] = _
+
+  // This needs to be volatile because it is set in mainRunnerFuturePool onFailure
+  // which is a different thread than waitForServerStarted, where it's read.
+  @volatile private var startupFailedThrowable: Option[Throwable] = None
 
   /* Lazy Fields */
 
@@ -91,75 +117,133 @@ class EmbeddedTwitterServer(
     start()
     createHttpClient(
       "httpAdminClient",
-      twitterServer.httpAdminPort)
+      httpAdminPort)
   }
 
-  lazy val statsReceiver = if (isGuiceApp) injector.instance[StatsReceiver] else new InMemoryStatsReceiver
+  lazy val isInjectable = twitterServer.isInstanceOf[TwitterServer]
+  lazy val injectableServer = twitterServer.asInstanceOf[TwitterServer]
+  lazy val injector = {
+    start()
+    injectableServer.injector
+  }
+
+  lazy val statsReceiver = if (isInjectable) injector.instance[StatsReceiver] else new InMemoryStatsReceiver
   lazy val inMemoryStatsReceiver = statsReceiver.asInstanceOf[InMemoryStatsReceiver]
-  lazy val adminHostAndPort = PortUtils.loopbackAddressForPort(twitterServer.httpAdminPort)
-  lazy val isGuiceTwitterServer = twitterServer.isInstanceOf[App]
+  lazy val adminHostAndPort = PortUtils.loopbackAddressForPort(httpAdminPort)
 
-  /* Overrides */
+  /* Public */
 
-  override protected def nonGuiceAppStarted(): Boolean = {
-    twitterServer.httpAdminPort != 0
+  def bind[T : Manifest](instance: T): EmbeddedTwitterServer = {
+    bindInstance[T](instance)
+    this
   }
 
-  override protected def logAppStartup() {
-    infoBanner("Server Started: " + appName)
-    info(s"AdminHttp    -> http://$adminHostAndPort/admin")
+  def mainResult: Future[Unit] = {
+    start()
+    if (_mainResult == null) {
+      throw new Exception("Server needs to be started by calling EmbeddedTwitterServer#start()")
+    }
+    else {
+      _mainResult
+    }
   }
 
-  override protected def updateClientFlags(map: Map[String, String]) = {
-    if (!verbose)
-      map + ("log.level" -> "WARNING")
-    else
-      map
+  def isStarted = started
+
+  // NOTE: Start is called in various places to "lazily start the server" as needed
+  def start(): Unit = {
+    if (!starting && !started) {
+      starting = true //mutation
+
+      runNonExitingMain()
+
+      if (waitForWarmup) {
+        waitForServerStarted()
+      }
+
+      started = true //mutation
+      starting = false //mutation
+    }
   }
 
-  override def close() {
+  def close(): Unit = {
     if (!closed) {
-      super.close()
+      twitterServer.log.clearHandlers()
+      infoBanner(s"Closing ${this.getClass.getSimpleName}: " + name)
+      try {
+        Await.result(twitterServer.close())
+        mainRunnerFuturePool.executor.shutdown()
+      } catch {
+        case e: Throwable =>
+          info(s"Error while closing ${this.getClass.getSimpleName}: $e")
+      }
       closed = true
     }
   }
 
-  override protected def combineArgs(): Array[String] = {
-    ("-admin.port=" + PortUtils.ephemeralLoopback) +: super.combineArgs
+  /**
+   * NOTE: We avoid using slf4j-api info logging so that we can differentiate the
+   * underlying server logs from the testing framework logging without requiring a
+   * test logging configuration to be loaded.
+   * @param str - the string message to log
+   */
+  def info(str: String): Unit = {
+    if (!disableTestLogging) {
+      println(str)
+    }
   }
 
-  /* Public */
+  def infoBanner(str: String): Unit = {
+    info("\n")
+    info("=" * 75)
+    info(str)
+    info("=" * 75)
+  }
 
-  def thriftPort: Int = {
+  def assertStarted(started: Boolean = true): Unit = {
+    assert(isInjectable)
     start()
-    twitterServer.thriftPort.get
+    injectableServer.started should be(started)
   }
 
-  def thriftHostAndPort: String = {
-    PortUtils.loopbackAddressForPort(thriftPort)
+  def assertHealthy(healthy: Boolean = true): Unit = {
+    healthResponse(healthy).get()
   }
 
-  def clearStats() = {
+  def isHealthy: Boolean = {
+    httpAdminPort != 0 &&
+      healthResponse(shouldBeHealthy = true).isReturn
+  }
+
+  def httpAdminPort: Int = {
+    getPort(twitterServer.adminBoundAddress)
+  }
+
+  def adminHttpServerRoutes: Seq[AdminHttpServer.Route] = {
+    val allRoutesField = FieldUtils.getField(twitterServer.getClass, "com$twitter$server$AdminHttpServer$$allRoutes", true)
+    allRoutesField.get(twitterServer).asInstanceOf[Seq[AdminHttpServer.Route]]
+  }
+
+  def clearStats(): Unit = {
     inMemoryStatsReceiver.counters.clear()
     inMemoryStatsReceiver.stats.clear()
     inMemoryStatsReceiver.gauges.clear()
   }
 
-  def printStats(includeGauges: Boolean = true) {
+  def statsMap = inMemoryStatsReceiver.stats.iterator.toMap.mapKeys(keyStr).toSortedMap
+  def countersMap = inMemoryStatsReceiver.counters.iterator.toMap.mapKeys(keyStr).toSortedMap
+  def gaugeMap = inMemoryStatsReceiver.gauges.iterator.toMap.mapKeys(keyStr).toSortedMap
 
-    def keyStr(keys: Seq[String]): String = {
-      keys.mkString("/")
-    }
-
-    infoBanner(appName + " Stats")
-    for ((key, values) <- inMemoryStatsReceiver.stats.iterator.toMap.mapKeys(keyStr).toSortedMap) {
+  def printStats(includeGauges: Boolean = true): Unit = {
+    infoBanner(name + " Stats")
+    for ((key, values) <- statsMap) {
       val avg = values.sum / values.size
       val valuesStr = values.mkString("[", ", ", "]")
       info(f"$key%-70s = $avg = $valuesStr")
     }
 
     info("\nCounters:")
-    for ((key, value) <- inMemoryStatsReceiver.counters.iterator.toMap.mapKeys(keyStr).toSortedMap) {
+    for ((key, value) <- countersMap) {
       info(f"$key%-70s = $value")
     }
 
@@ -171,19 +255,33 @@ class EmbeddedTwitterServer(
     }
   }
 
-  def assertHealthy(healthy: Boolean = true) {
-    val expectedBody = if (healthy) "OK\n" else ""
-
-    httpGetAdmin(
-      "/health",
-      andExpect = Status.Ok,
-      withBody = expectedBody)
+  def getCounter(name: String): Int = {
+    countersMap.getOrElse(name, 0)
   }
 
-  def assertAppStarted(started: Boolean = true) {
-    assert(isGuiceApp)
-    start()
-    guiceApp.appStarted should be(started)
+  def assertCounter(name: String, expected: Int): Unit = {
+    getCounter(name) should equal(expected)
+  }
+
+  def assertCounter(name: String)(callback: Int => Boolean): Unit = {
+    callback(getCounter(name)) should be(true)
+  }
+
+  def getStat(name: String): Seq[Float] = {
+    statsMap.getOrElse(name, Seq())
+  }
+
+  def assertStat(name: String, expected: Seq[Float]): Unit = {
+    getStat(name) should equal(expected)
+  }
+
+  def getGauge(name: String): Float = {
+    gaugeMap.get(name) map { _.apply() } getOrElse 0f
+  }
+
+  def assertGauge(name: String, expected: Float): Unit = {
+    val value = getGauge(name)
+    value should equal(expected)
   }
 
   def httpGetAdmin(
@@ -213,10 +311,17 @@ class EmbeddedTwitterServer(
     start()
 
     /* Pre - Execute */
+
+    /* Don't overwrite request.headers potentially in given request */
+    val defaultHeaders = defaultRequestHeaders filterKeys { !request.headerMap.contains(_) }
+    addOrRemoveHeaders(request, defaultHeaders)
+    // headers added last so they can overwrite "defaults"
+    addOrRemoveHeaders(request, headers)
+
     printRequest(request, suppress)
 
     /* Execute */
-    val response = handleRequest(request, client = client, additionalHeaders = headers)
+    val response = handleRequest(request, client = client)
 
     /* Post - Execute */
     printResponseMetadata(response, suppress)
@@ -285,21 +390,59 @@ class EmbeddedTwitterServer(
     info(response.contentString + "\n")
   }
 
+  protected def createApiRequest(path: String, method: Method = Method.Get): Request = {
+    val pathToUse = if (path.startsWith("http"))
+      URI.create(path).getPath
+    else
+      path
+
+    Request(method, pathToUse)
+  }
+
+  protected def nonInjectableServerStarted(): Boolean = {
+    isHealthy
+  }
+
+  protected def logStartup(): Unit = {
+    infoBanner("Server Started: " + name)
+    info(s"AdminHttp      -> http://$adminHostAndPort/admin")
+  }
+
+  protected def updateFlags(map: Map[String, String]) = {
+    if (!verbose)
+      map + ("log.level" -> "WARNING")
+    else
+      map
+  }
+
+  protected def combineArgs(): Array[String] = {
+    val flagsStr =
+      flagsAsArgs(
+        updateFlags(
+          resolveFlags(useSocksProxy, flags)))
+    ("-admin.port=" + PortUtils.ephemeralLoopback) +: (args ++ flagsStr).toArray
+  }
+
+  protected def bindInstance[T: Manifest](instance: T): Unit = {
+    if (!isInjectable) {
+      throw new IllegalStateException("Cannot call bind() with a non-injectable underlying server." )
+    }
+    injectableServer.addFrameworkOverrideModules(new InjectionServiceModule(instance))
+  }
+
   /* Private */
 
-  private def receivedResponseStr(response: Response) = {
+  private def keyStr(keys: Seq[String]): String = {
+    keys.mkString("/")
+  }
+
+  private def receivedResponseStr(response: Response): String = {
     "\n\nReceived Response:\n" + response.encodeString()
   }
 
   private def handleRequest(
     request: Request,
-    client: Service[Request, Response],
-    additionalHeaders: Map[String, String] = Map()): Response = {
-
-    // Don't overwrite request.headers set by RequestBuilder in httpFormPost.
-    val defaultNewHeaders = defaultRequestHeaders filterKeys { !request.headerMap.contains(_) }
-    addOrRemoveHeaders(request, defaultNewHeaders)
-    addOrRemoveHeaders(request, additionalHeaders) //additional headers get added second so they can overwrite defaults
+    client: Service[Request, Response]): Response = {
 
     val futureResponse = client(request)
     val elapsed = Stopwatch.start()
@@ -312,7 +455,7 @@ class EmbeddedTwitterServer(
     }
   }
 
-  private def printRequest(request: Request, suppress: Boolean) {
+  private def printRequest(request: Request, suppress: Boolean): Unit = {
     if (!suppress) {
       val headers = request.headerMap.mkString(
         "[Header]\t",
@@ -328,7 +471,7 @@ class EmbeddedTwitterServer(
     }
   }
 
-  private def printResponseMetadata(response: Response, suppress: Boolean) {
+  private def printResponseMetadata(response: Response, suppress: Boolean): Unit = {
     if (!suppress) {
       info("-" * 75)
       info("[Status]\t" + response.status)
@@ -339,7 +482,7 @@ class EmbeddedTwitterServer(
     }
   }
 
-  private def printResponseBody(response: Response, suppress: Boolean) {
+  private def printResponseBody(response: Response, suppress: Boolean): Unit = {
     if (!suppress) {
       if (response.isChunked) {
         //no-op
@@ -364,15 +507,6 @@ class EmbeddedTwitterServer(
     }
   }
 
-  protected def createApiRequest(path: String, method: Method = Method.Get) = {
-    val pathToUse = if (path.startsWith("http"))
-      URI.create(path).getPath
-    else
-      path
-
-    Request(method, pathToUse)
-  }
-
   private def addAcceptHeader(
     accept: MediaType,
     headers: Map[String, String]): Map[String, String] = {
@@ -382,16 +516,69 @@ class EmbeddedTwitterServer(
       headers
   }
 
-  //TODO: AF-567: Create inject-utils
-  implicit class RichMap[K, V](wrappedMap: Map[K, V]) {
-    def mapKeys[T](func: K => T): Map[T, V] = {
-      for ((k, v) <- wrappedMap) yield {
-        func(k) -> v
-      }
-    }
+  private def healthResponse(shouldBeHealthy: Boolean = true): Try[Response] = {
+    val expectedBody = if (shouldBeHealthy) "OK\n" else ""
 
-    def toSortedMap(implicit ordering: Ordering[K]) = {
-      SortedMap[K, V]() ++ wrappedMap
+    Try {
+      httpGetAdmin(
+        "/health",
+        andExpect = Status.Ok,
+        withBody = expectedBody,
+        suppress = !verbose)
     }
+  }
+
+  private def flagsAsArgs(flags: Map[String, String]): Iterable[String] = {
+    flags.map { case (k, v) => "-" + k + "=" + v }
+  }
+
+  private def isSingletonObject(server: com.twitter.server.TwitterServer) = {
+    import scala.reflect.runtime.currentMirror
+    currentMirror.reflect(server).symbol.isModuleClass
+  }
+
+  private def runNonExitingMain(): Unit = {
+    // we call distinct here b/c port flag args can potentially be added multiple times
+    val allArgs = combineArgs().distinct
+    info("Starting " + name + " with args: " + allArgs.mkString(" "))
+
+    _mainResult = mainRunnerFuturePool {
+      try {
+        twitterServer.nonExitingMain(allArgs)
+      } catch {
+        case e: OutOfMemoryError if e.getMessage == "PermGen space" =>
+          println("OutOfMemoryError(PermGen) in server startup. " +
+            "This is most likely due to the incorrect setting of a client " +
+            "flag (not defined or invalid). Increase your PermGen to see the exact error message (e.g. -XX:MaxPermSize=256m)")
+          e.printStackTrace()
+          System.exit(-1)
+        case e if !NonFatal.isNonFatal(e) =>
+          println("Fatal exception in server startup.")
+          throw new Exception(e) // Need to rethrow as a NonFatal for FuturePool to "see" the exception :/
+      }
+    } onFailure { e =>
+      //If we rethrow, the exception will be suppressed by the Future Pool's monitor. Instead we save off the exception and rethrow outside the pool
+      startupFailedThrowable = Some(e)
+    }
+  }
+
+  private def waitForServerStarted(): Unit = {
+    for (i <- 1 to maxStartupTimeSeconds) {
+      info("Waiting for warmup phases to complete...")
+
+      if (startupFailedThrowable.isDefined) {
+        println(s"\nEmbedded server $name failed to startup")
+        throw startupFailedThrowable.get
+      }
+
+      if ((isInjectable && injectableServer.started) || (!isInjectable && nonInjectableServerStarted)) {
+        started = true
+        logStartup()
+        return
+      }
+
+      Thread.sleep(1000)
+    }
+    throw new StartupTimeoutException(s"App: $name failed to startup within $maxStartupTimeSeconds seconds.")
   }
 }
